--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="BRAND DESIGN 2023.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-details2.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
