--- a/index.html
+++ b/index.html
@@ -351,14 +351,14 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Mavrito Lana Dere</h2>
+                    <h2 class="w-title">ANIMATION</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">2D Animation</span> / <span class="w-date">2021-2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-details3.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
