--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <!-- Add this style to set the background color to black -->
   <style>
     body {
-      background-color: rgb(46, 80, 77);
+      background-color: rgb(28, 48, 46);
     }
 
     h3 {
@@ -69,14 +69,14 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <div id="hero" class="hero route bg-image" style="background-image: url(https://steamuserimages-a.akamaihd.net/ugc/770616950637706003/8FF807E120B2942915834FE4CA204D44658CB2A0/?imw=637&imh=358&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true)">
+  <div id="hero" class="hero route bg-image" style="background-image: url(https://i.pinimg.com/originals/ba/67/f9/ba67f93b54e5d3618a8a89a58e34631e.gif)">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="hero-title mb-4">530HZ</h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="Graphic Designer, Illustrator, Animator" data-type-speed="30"></span></p>
+          <p class="hero-subtitle"><span class="typed" data-typed-items="Digital Artist, Graphic Designer, Illustrator" data-type-speed="30"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -141,7 +141,7 @@
                       }
                     </style>
                     <p class="lead">
-                      A digital creator and animator who brings imagination to life through creative and visually stunning artworks. With a passion for all things digital, I create animations, illustrations, and designs that capture the essence of my subject matter.
+                      A digital artist who brings imagination to life through creative and visually stunning artworks. With a passion for all things digital, I create art that captures the essence of my subject matter.
 
                     </p>
                     <p class="lead">
@@ -167,9 +167,9 @@
                 Services
               </h3>
               <p class="subtitle-a">
-                <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h3>
+                <h3>The services that I offer.</h3>
               </p>
-              <div class="line-mf"></div>
+              
             </div>
           </div>
         </div>
@@ -224,7 +224,7 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Counter Section ======= -->
-    <div class="section-counter paralax-mf bg-image" style="background-image: url(https://media.tenor.com/UmWmiibzlZMAAAAC/pixel-rain.gif)">
+    <div class="section-counter paralax-mf bg-image" style="background-image: url(https://i.pinimg.com/originals/e4/73/60/e47360c79cf6111fcbeac48c002340fe.gif)">
       <div class="overlay-mf"></div>
       <div class="container position-relative">
         <div class="row">
@@ -288,7 +288,7 @@
               <p class="subtitle-a">
                 <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h3>
               </p>
-              <div class="line-mf"></div>
+              
             </div>
           </div>
         </div>
@@ -445,7 +445,7 @@
 
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(https://steamuserimages-a.akamaihd.net/ugc/770616950637706003/8FF807E120B2942915834FE4CA204D44658CB2A0/?imw=637&imh=358&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true)">
+    <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(https://i.pinimg.com/originals/e4/73/60/e47360c79cf6111fcbeac48c002340fe.gif)">
       <div class="overlay-mf"></div>
       <div class="container">
         <div class="row">
