--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
   <!-- Add this style to set the background color to black -->
   <style>
     body {
-      background-color: rgb(28, 48, 46);
+      background-color: rgb(21, 24, 32);
     }
 
     h3 {
-  color: #ffffff;
+  color: #dddddd;
 }
   </style>
 
@@ -96,7 +96,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="https://64.media.tumblr.com/0e3ef7a27ce642258b3d19ef6430a8ca/b6005908b93ed7fd-79/s1280x1920/128da0cdd9664955e8dd59b338e167e6c7313168.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYRZmvTHuH2xipvrKNVdMcezsAO2tigamrFNd5BrHiANoop2tS_S0MXPnNJizu4FOzVXbUB7zmXsJ0lNgyYkXa_rb8YAow=s1600" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
@@ -112,19 +112,19 @@
                     <p class="title-s">SKILLS</p>
                     <span>ILLUSTRATION</span> <span class="pull-right"></span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 85%; background-color: green;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 78%; background-color: rgb(21, 52, 73);" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <span>2D ANIMATION</span> <span class="pull-right"></span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 75%; background-color: green;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 60%; background-color: rgb(21, 52, 73);" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>3D MODELING</span> <span class="pull-right"></span>
+                    <span>CREATIVE DIRECTION</span> <span class="pull-right"></span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 70%; background-color: green;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 90%; background-color: rgb(21, 52, 73);" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <span>GRAPHIC DESIGN</span> <span class="pull-right"></span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 90%; background-color: green;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 90%; background-color: rgb(21, 52, 73);" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                 </div>
@@ -145,14 +145,17 @@
 
                     </p>
                     <p class="lead">
-                      After tirelessly honing skills, being an artist becomes a force to be reckoned with. Through all the late nights, caffeine-fueled sessions, and moments of sheer elation, an artist never forgets how one falls in love with art in the first place. It is not just a career - it's a way of life, a never-ending adventure that challenges and excites.
-
+                      After tirelessly honing my skills, being an artist becomes a force to be reckoned with. Through all the late nights, caffeine-fueled sessions, and moments of sheer elation, an artist never forgets how one falls in love with art in the first place. It is not just my career - it's my way of life, a never-ending adventure that challenges and excites.
+<br>
+<br>
+Please watch the video below to know more about me. I look forward to working with you!
                     </p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+          <iframe src="https://drive.google.com/file/d/1f8t9oKqcoGcb4NsHxNircF2sA95dqutz/preview" width="340" height="715" allow="autoplay"></iframe>
         </div>
       </div>
     </section><!-- End About Section -->
@@ -167,7 +170,7 @@
                 Services
               </h3>
               <p class="subtitle-a">
-                <h3>The services that I offer.</h3>
+                <h3>The services that I offer</h3>
               </p>
               
             </div>
@@ -286,9 +289,11 @@
                 Portfolio
               </h3>
               <p class="subtitle-a">
-                <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h3>
-              </p>
+                <h3>╰── ⋅ ⋅ ── ✩ ── ⋅ ⋅ ──╯
               
+              <br>
+              </h3>
+            </p>
             </div>
           </div>
         </div>
@@ -310,7 +315,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-details.html"> <span class="bi bi-arrow-up-right-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -334,7 +339,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details2.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-details2.html"> <span class="bi bi-arrow-up-right-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -343,9 +348,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYSLuLlKuWOFsjQrfdXv4XzpYpApeBV_bmRoj2EkplxT1_Vl6Bp1PEdMhWNlnmoDeI-33NrVW1Fb-K3qfqIku0uKnznqxw=s1600" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-3.jpg" alt="" class="img-fluid">
+                  <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYSLuLlKuWOFsjQrfdXv4XzpYpApeBV_bmRoj2EkplxT1_Vl6Bp1PEdMhWNlnmoDeI-33NrVW1Fb-K3qfqIku0uKnznqxw=s1600" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -358,7 +363,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details3.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-details3.html"> <span class="bi bi-arrow-up-right-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -367,22 +372,22 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/silen.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-4.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/silen.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Bindo Laro Cado</h2>
+                    <h2 class="w-title">FILM</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Film</span> / <span class="w-date">2022-2023</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-details4.html"> <span class="bi bi-arrow-up-right-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -399,14 +404,14 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Studio Lena Mado</h2>
+                    <h2 class="w-title">GRAPHIC DESIGN AND ILLUSTRATION</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-details.html"> <span class="bi bi-arrow-up-right-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -423,14 +428,14 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Studio Big Bang</h2>
+                    <h2 class="w-title">ADVERTISEMENTS</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2017</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-details.html"> <span class="bi bi-arrow-up-right-circle"></span></a>
                     </div>
                   </div>
                 </div>
