--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -11,6 +11,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/hz-favi.png" rel="icon">
+  
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -32,7 +33,7 @@
 
 <style>
   body {
-    background-color: rgb(46, 80, 77);
+    background-color: rgb(21, 24, 32);
   }
 
   h3 {
@@ -71,17 +72,17 @@ color: #ffffff;
     </div>
   </header><!-- End Header -->
 
-  <div class="hero hero-single route bg-image" style="background-image: url(assets/img/MAS1.png)">
+  <div class="hero hero-single route bg-image" style="background-image: url(assets/img/lgmanual.png)">
     <div class="overlay-mf"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
         <div class="container">
-          <h2 class="hero-title mb-4">MASUKI</h2>
+          <h2 class="hero-title mb-4">HARBOR</h2>
           <ol class="breadcrumb d-flex justify-content-center">
             <li class="breadcrumb-item">
               <a href="#">Home</a>
             </li>
-            <li class="breadcrumb-item active">MASUKI</li>
+            <li class="breadcrumb-item active">HARBOR MARITIME CONSULTANCY</li>
           </ol>
         </div>
       </div>
@@ -101,45 +102,45 @@ color: #ffffff;
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/masuki visual ads.png" alt="">
+                  <img src="assets/img/hrbrr.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/MAS1.png" alt="">
+                  <img src="assets/img/mug-hrbr.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/MAS2.png" alt="">
+                  <img src="assets/img/lgmanual.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/MAS3.png" alt="">
+                  <img src="assets/img/manualmock.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/MAS4.png" alt="">
+                  <img src="assets/img/lany-hrbr2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/MAS5.png" alt="">
-                </div>
-
-
-                <div class="swiper-slide">
-                  <img src="assets/img/TAKE OUT BOX.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/CHOPSTICKSpng.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/MENU B.png" alt="">
+                  <img src="assets/img/boxes-hrbr.png" alt="">
                 </div>
 
 
                 <div class="swiper-slide">
-                  <img src="assets/img/mockup bg.png" alt="">
+                  <img src="assets/img/CALENDAR.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/365.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/stationaert.png" alt="">
+                </div>
+
+
+                <div class="swiper-slide">
+                  <img src="assets/img/CC-HARBOR.png" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
@@ -151,15 +152,15 @@ color: #ffffff;
               <h3>Project information</h3>
               <ul><h9>
                 <li><strong>Category</strong>: Brand design</li>
-                <li><strong>Client</strong>: MASUKI</li>
+                <li><strong>Client</strong>: HARBOR</li>
                 <li><strong>Project date</strong>: 2023</li>
-                <li><strong>Position</strong>: Creative Director, Graphic Artist, Layout Artist</li>
+                <li><strong>Position</strong>: Graphic Artist, Layout Artist</li>
               </ul></h9>
             </div>
             <div class="portfolio-description">
-              <h2>"FLAVORS FROM OUR ROOTS"</h2>
+              <h2>"HARBOR"</h2>
               <p><h9>
-                MASUKI is a revamp project created by Koi Creatives, as led by Hazel Ampon as the Creative Director. This rebranding aims to create a new look for Masuki, which embraces its oriental beginnings and the rich flavors their food has to offer.
+                Harbor Maritime Consultancy is a company that forges connections that build visions and partnerships. Harbor aspires to be the bridge connecting individuals who assist seafarers and aspiring Maritime professionals, enabling them to achieve their goals in their Maritime careers.
               </p></h9>
             </div>
           </div>
@@ -170,6 +171,103 @@ color: #ffffff;
     </section><!-- End Portfolio Details Section -->
 <br>
 <br>
+<div class="hero hero-single route bg-image" style="background-image: url(assets/img/MAS1.png)">
+  <div class="overlay-mf"></div>
+  <div class="hero-content display-table">
+    <div class="table-cell">
+      <div class="container">
+        <h2 class="hero-title mb-4">MASUKI</h2>
+        <ol class="breadcrumb d-flex justify-content-center">
+          <li class="breadcrumb-item">
+            <a href="#">Home</a>
+          </li>
+          <li class="breadcrumb-item active">MASUKI</li>
+        </ol>
+      </div>
+    </div>
+  </div>
+</div>
+
+<main id="main">
+
+  <!-- ======= Portfolio Details Section ======= -->
+  <section id="portfolio-details" class="portfolio-details">
+    <div class="container">
+
+      <div class="row gy-4">
+
+        <div class="col-lg-8">
+          <div class="portfolio-details-slider swiper">
+            <div class="swiper-wrapper align-items-center">
+
+              <div class="swiper-slide">
+                <img src="assets/img/masuki visual ads.png" alt="">
+              </div>
+
+              <div class="swiper-slide">
+                <img src="assets/img/MAS1.png" alt="">
+              </div>
+
+              <div class="swiper-slide">
+                <img src="assets/img/MAS2.png" alt="">
+              </div>
+
+              <div class="swiper-slide">
+                <img src="assets/img/MAS3.png" alt="">
+              </div>
+
+              <div class="swiper-slide">
+                <img src="assets/img/MAS4.png" alt="">
+              </div>
+
+              <div class="swiper-slide">
+                <img src="assets/img/MAS5.png" alt="">
+              </div>
+
+
+              <div class="swiper-slide">
+                <img src="assets/img/TAKE OUT BOX.png" alt="">
+              </div>
+
+              <div class="swiper-slide">
+                <img src="assets/img/CHOPSTICKSpng.png" alt="">
+              </div>
+
+              <div class="swiper-slide">
+                <img src="assets/img/MENU B.png" alt="">
+              </div>
+
+
+              <div class="swiper-slide">
+                <img src="assets/img/mockup bg.png" alt="">
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="portfolio-info">
+            <h3>Project information</h3>
+            <ul><h9>
+              <li><strong>Category</strong>: Brand design</li>
+              <li><strong>Client</strong>: MASUKI</li>
+              <li><strong>Project date</strong>: 2023</li>
+              <li><strong>Position</strong>: Creative Director, Graphic Artist, Layout Artist</li>
+            </ul></h9>
+          </div>
+          <div class="portfolio-description">
+            <h2>"FLAVORS FROM OUR ROOTS"</h2>
+            <p><h9>
+              MASUKI is a revamp project created by Koi Creatives, as led by Hazel Ampon as the Creative Director. This rebranding aims to create a new look for Masuki, which embraces its oriental beginnings and the rich flavors their food has to offer.
+            </p></h9>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+  </section><!-- End Portfolio Details Section -->
     <div>
       <div class="hero hero-single route bg-image" style="background-image: url(assets/img/Logo\ Mockup\ on\ wall\ texture.png)">
         <div class="overlay-mf"></div>
@@ -352,7 +450,7 @@ color: #ffffff;
     </div>
   
 <!-- ======= Contact Section ======= -->
-<section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(https://steamuserimages-a.akamaihd.net/ugc/770616950637706003/8FF807E120B2942915834FE4CA204D44658CB2A0/?imw=637&imh=358&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true)">
+<section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(https://i.pinimg.com/originals/ba/67/f9/ba67f93b54e5d3618a8a89a58e34631e.gif)">
   <div class="overlay-mf"></div>
   <div class="container">
     <div class="row">
