--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -110,6 +110,10 @@ color: #ffffff;
                 </div>
 
                 <div class="swiper-slide">
+                  <img src="assets/img/TUMB-HRBR2.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
                   <img src="assets/img/lgmanual.png" alt="">
                 </div>
 
