--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -12,6 +12,7 @@
   <!-- Favicons -->
   <link href="assets/img/hz-favi.png" rel="icon">
  
+
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -32,7 +33,7 @@
 
 <style>
   body {
-    background-color: rgb(46, 80, 77);
+    background-color:rgb(21, 24, 32);
   }
 
   h3 {
@@ -145,7 +146,7 @@ color: #ffffff;
             </div>
             <div class="portfolio-description">
               <h2>"INTAYON PA UNION"</h2>
-              <p><h9>
+              <p align="justify"><h9>
                 PANAGWAN is a brand design project for a travel agency focused on showcasing the beauty of Pangasinan and La Union. The project aims to create a unique and memorable brand identity that encapsulates the essence of these two beautiful provinces in the Philippines. Through thoughtful design, PANAGWAN seeks to inspire travelers to explore the hidden gems, picturesque beaches, and vibrant communities that make Pangasinan and La Union truly special destinations.
               </p></h9>
             </div>
@@ -250,9 +251,9 @@ color: #ffffff;
                   </ul></h9>
                 </div>
                 <div class="portfolio-description">
-                  <h2>This is an example of portfolio detail</h2>
-                  <p><h9>
-                    Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                  <h2>"EMBRACE YOUR BRAND'S TRUE NATURE"</h2>
+                  <p align="justify"><h9>
+                    Kinaiya is a brand which aims to commemorate important brand elements and visuals that are intertwined with the client’s vision resulting in the best quality outcome. Kinaiya aspires to provide reliable services to clients and transform ideas into remarkable projects with a defining identity that doesn't change depending on what is currently popular.
                   </p></h9>
                 </div>
               </div>
@@ -311,15 +312,15 @@ color: #ffffff;
                         <h3>Project information</h3>
                         <ul><h9>
                           <li><strong>Category</strong>: Brand design</li>
-                          <li><strong>Brand</strong>: KINAIYA</li>
+                          <li><strong>Brand</strong>: GUNITA</li>
                           <li><strong>Project date</strong>: 2022</li>
                           <li><strong>Position</strong>: Art Director, Graphic Artist, Layout Artist</li>
                         </ul></h9>
                       </div>
                       <div class="portfolio-description">
-                        <h2>This is an example of portfolio detail</h2>
-                        <p><h9>
-                          Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                        <h2>"REMARKABLE DESIGNS WORTH CELEBRATING"</h2>
+                        <p align="justify"><h9>
+                          Gunita is a new and progressing brand that caters to creating memorable designs best catered to what the clients’ want. As the meaning goes, Gunita wants to provide the clients with visuals that they feel can last a long time. It is not just about seeing the designs but actually feeling it in every other sense in the best possible way to be remembered.
                         </p></h9>
                       </div>
                     </div>
@@ -327,6 +328,21 @@ color: #ffffff;
                   </div>
                   <br>
                   <br>
+                  <div class="row gy-4">
+                  <iframe src="https://drive.google.com/file/d/1Ihk0DxxLNdhX5q6nJQ0Sec1ChqIcBnFE/preview" width="400" height="715" allow="autoplay"></iframe>
+                  <br>
+                  <div class="col-lg-4">
+                    <div class="portfolio-info">
+                      <h3>GUNITA BRAND PROPOSAL</h3>
+                      <ul><p align="justify"><h9>
+                        This project aims to showcase the true nature of the multitude of attractions and delicacies in Ligao—developing their tourism growth to create a brand that will foster Ligao’s locations for travel and how people see Albay in another light through the area.
+                        <br><br>
+                        <h3><li><strong>VIDEO EDITOR</strong>:
+                          <a href="https://ztgello.github.io/PORTFOLIO/">GSUS</a>
+                          </li></p>
+                      </ul></h3>
+                    </div>
+    
 
 
                 </div>
@@ -334,7 +350,7 @@ color: #ffffff;
     </div>
   
 <!-- ======= Contact Section ======= -->
-<section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(https://steamuserimages-a.akamaihd.net/ugc/770616950637706003/8FF807E120B2942915834FE4CA204D44658CB2A0/?imw=637&imh=358&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true)">
+<section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(https://i.pinimg.com/originals/ba/67/f9/ba67f93b54e5d3618a8a89a58e34631e.gif)">
   <div class="overlay-mf"></div>
   <div class="container">
     <div class="row">
