--- a/index.html
+++ b/index.html
@@ -360,9 +360,9 @@ Please watch the video below to know more about me. I look forward to working wi
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYSLuLlKuWOFsjQrfdXv4XzpYpApeBV_bmRoj2EkplxT1_Vl6Bp1PEdMhWNlnmoDeI-33NrVW1Fb-K3qfqIku0uKnznqxw=s1600" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/A4gif.gif" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYSLuLlKuWOFsjQrfdXv4XzpYpApeBV_bmRoj2EkplxT1_Vl6Bp1PEdMhWNlnmoDeI-33NrVW1Fb-K3qfqIku0uKnznqxw=s1600" alt="" class="img-fluid">
+                  <img src="assets/img/A4gif.gif" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
