--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ h9 {
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYRZmvTHuH2xipvrKNVdMcezsAO2tigamrFNd5BrHiANoop2tS_S0MXPnNJizu4FOzVXbUB7zmXsJ0lNgyYkXa_rb8YAow=s1600" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assets/img/artist-img.jpg" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
