--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ h9 {
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/artist-img.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assets/img/artist img.JPG" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
