--- a/index.html
+++ b/index.html
@@ -384,14 +384,14 @@ Please watch the video below to know more about me. I look forward to working wi
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">FILM</h2>
+                     <h2 class="w-title">BEYOND ASTEROID A-408</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Film</span> / <span class="w-date">2022-2023</span>
+                      <span class="w-ctegory">Art Exhibit</span> / <span class="w-date">2024</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="Film.html"> <span class="bi bi-arrow-up-right-circle"></span></a>
+                      <a href="ArtExhibit.html"> <span class="bi bi-arrow-up-right-circle"></span></a>
                     </div>
                   </div>
                 </div>
