--- a/index.html
+++ b/index.html
@@ -376,9 +376,9 @@ Please watch the video below to know more about me. I look forward to working wi
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/silen.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+             <a href="assets/img/exhibit-cover.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/silen.png" alt="" class="img-fluid">
+                  <img src="assets/img/exhibit-cover.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
