--- a/index.html
+++ b/index.html
@@ -304,22 +304,22 @@ Please watch the video below to know more about me. I look forward to working wi
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/C-CARD1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/exhibit-cover.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/C-CARD1.png" alt="" class="img-fluid">
+                  <img src="assets/img/exhibit-cover.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">BRAND DESIGN (2022)</h2>
+                    <h2 class="w-title">BEYOND ASTEROID A-408</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Brand Design</span> / <span class="w-date">2022</span>
+                      <span class="w-ctegory">Art Exhibit</span> / <span class="w-date">2024</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="Brand-Design-2022.html"> <span class="bi bi-arrow-up-right-circle"></span></a>
+                      <a href="ArtExhibit.html"> <span class="bi bi-arrow-up-right-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -352,9 +352,33 @@ Please watch the video below to know more about me. I look forward to working wi
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/A4gif.gif" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/C-CARD1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/A4gif.gif" alt="" class="img-fluid">
+                  <img src="assets/img/C-CARD1.png" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">BRAND DESIGN (2022)</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Brand Design</span> / <span class="w-date">2022</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="Brand-Design-2022.html"> <span class="bi bi-arrow-up-right-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYSLuLlKuWOFsjQrfdXv4XzpYpApeBV_bmRoj2EkplxT1_Vl6Bp1PEdMhWNlnmoDeI-33NrVW1Fb-K3qfqIku0uKnznqxw=s1600" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYSLuLlKuWOFsjQrfdXv4XzpYpApeBV_bmRoj2EkplxT1_Vl6Bp1PEdMhWNlnmoDeI-33NrVW1Fb-K3qfqIku0uKnznqxw=s1600" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -368,30 +392,6 @@ Please watch the video below to know more about me. I look forward to working wi
                   <div class="col-sm-4">
                     <div class="w-like">
                       <a href="Animation.html"> <span class="bi bi-arrow-up-right-circle"></span></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box">
-             <a href="assets/img/exhibit-cover.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
-                <div class="work-img">
-                  <img src="assets/img/exhibit-cover.png" alt="" class="img-fluid">
-                </div>
-              </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                     <h2 class="w-title">BEYOND ASTEROID A-408</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Art Exhibit</span> / <span class="w-date">2024</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="ArtExhibit.html"> <span class="bi bi-arrow-up-right-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -446,10 +446,9 @@ Please watch the video below to know more about me. I look forward to working wi
               </div>
             </div>
           </div>
-
         </div>
-      </div>
-    </section><!-- End Portfolio Section -->
+        </div>
+        </section><!-- End Portfolio Section -->
 
 
 
