--- a/index.html
+++ b/index.html
@@ -375,10 +375,10 @@ Please watch the video below to know more about me. I look forward to working wi
             </div>
           </div>
           <div class="col-md-4">
-            <div class="work-box">
-              <a href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYSLuLlKuWOFsjQrfdXv4XzpYpApeBV_bmRoj2EkplxT1_Vl6Bp1PEdMhWNlnmoDeI-33NrVW1Fb-K3qfqIku0uKnznqxw=s1600" data-gallery="portfolioGallery" class="portfolio-lightbox">
+           <div class="work-box">
+              <a href="assets/img/thumbanim.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYSLuLlKuWOFsjQrfdXv4XzpYpApeBV_bmRoj2EkplxT1_Vl6Bp1PEdMhWNlnmoDeI-33NrVW1Fb-K3qfqIku0uKnznqxw=s1600" alt="" class="img-fluid">
+                  <img src="assets/img/thumbanim.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
